=== 1.2.8 / 2010-05-27

* re-added C code for buffer method. This was lost in the 1.2.6 merge.
 
=== 1.2.7 / 2010-05-26

* removed redundant method cropped_to_fit
* added image files for tests

=== 1.2.6 / 2010-05-26

* Now based on ImageScience 1.2.1
* Added new method resize_with_crop

=== 1.2.5 / 2010-01-26

* 1 tweak

  * added some tests

=== 1.2.4 / 2010-01-26

* 1 minor enhancements, one little mod

  * added fit_within() method to resize an image to fit within a height and
    width without changing the aspect ratio
  * modified the tests to work with Ruby 1.8.7 which we are using

=== 1.2.3 / 2010-01-22

* 1 minor enhancements

  * switched to gemcutter

=== 1.2.2 / 2010-01-01

* 1 minor enhancements

  * added buffer() method to return a buffer for an image so we can write images
    to Amazon S3

=== 1.2.1 / 2009-08-14

* 2 minor enhancements:

  * Added luis' patches to make it build properly on windows.
  * with_image now raises on missing/bad files.

== 1.2.0 / 2009-06-23

* 7 minor enhancements:

  *	Moved quick_thumb to bin/image_science_thumb and properly added.
  * Added -s (square) flag to bin/image_science_thumb
  * Added autorotating on image load. (choonkeat)
  * Added ruby_inline to clean globs
  * Added with_image_from_memory. (sumbach)
  * Switched to minitest.
  * Updated rakefile for now hoe capabilities.

* 3 bug fixes:

  * Check and convert to 24 BPP if save type is jpg. Caused by 32bpp png to jpg.
  * Fixed 1.9isms
  * Fixed BMP support. Tweaked whitespace.

== 1.1.3 / 2007-05-30

* 2 minor enhancements:

  * Added quick_thumb as an example to look at.
  * Error handler doesn't raise by default. Raises if $DEBUG==true.

== 1.1.2 / 2007-04-18

* 2 bug fixes:

  * reports bad height/width values for resize
  * explicitly removes ICC color profiles from PNGs (bug in freeimage).

== 1.1.1 / 2007-03-08

* 5 minor enhancements:

  * Added error handler that raises with information about what went wrong.